--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,15 @@
-cmake_minimum_required(VERSION 3.0.0)
-project(NUBRS VERSION 0.1.0)
+cmake_minimum_required(VERSION 3.10)
+project(main VERSION 0.1.0)
 
 FIND_PACKAGE(OpenMP REQUIRED)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
 if(OPENMP_FOUND)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
-include_directories("${PROJECT_BINARY_DIR}")
-
-file(GLOB_RECURSE mains RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/main*.cpp")
-foreach(mainfile IN LISTS mains)
-    get_filename_component(mainname ${mainfile} NAME_WE)
-    add_executable(${mainname} ${mainfile})
-endforeach()
+add_subdirectory(src)
+add_subdirectory(scripts)
+add_subdirectory(tests)
