--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -9,14 +9,14 @@ endif()
 link_libraries(${GLFW_LINK})
 
 
-# 链接系统的 OpenGL 框架
-if (APPLE)
-    target_link_libraries(xrender "-framework OpenGL")
-endif()
 
 file(GLOB_RECURSE CPPSRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 file(GLOB_RECURSE CSRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
-add_library(XRENDER ${CSRCS} ${CPPSRCS})
+if (APPLE)
+    add_library(XRENDER ${CSRCS} ${CPPSRCS} "-framework OpenGL")
+else()
+    add_library(XRENDER ${CSRCS} ${CPPSRCS})
+endif()
 target_include_directories(XRENDER INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
