--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -3,9 +3,9 @@ if (APPLE)
     set(GLFW_LINK ${CMAKE_CURRENT_SOURCE_DIR}/libs/GLFW/libglfw.3.dylib)
 endif()
 if (WIN32)
-    set(GLFW_LINK ${CMAKE_CURRENT_SOURCE_DIR}/libs/GLFW/glfw3_32.lib)
-elseif (WIN64)
-    set(GLFW_LINK ${CMAKE_CURRENT_SOURCE_DIR}/libs/GLFW/glfw3_64.lib)
+    set(GLFW_LINK ${CMAKE_CURRENT_SOURCE_DIR}/libs/GLFW/glfw3_x86.lib)
+elseif (WIN64 && !APPLE)
+    set(GLFW_LINK ${CMAKE_CURRENT_SOURCE_DIR}/libs/GLFW/glfw3_x64.lib)
 endif()
 link_libraries(${GLFW_LINK})
 
