--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,6 +14,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+      - uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x86
       - name: Build
         shell: cmd
         run: |
