--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: NoneRender_win32.zip
+          name: RenderLab_win32.zip
           path: |
             main.exe
             resource
