--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,11 @@ FIND_PACKAGE(OpenMP REQUIRED)
 set(CMAKE_CXX_STANDARD 17)
 
 if (APPLE)
-    set(CMAKE_CXX_COMPILER clang++)
+    set(CMAKE_CXX_COMPILER c++)
     set(OPENMP_LIBRARIES "/opt/homebrew/opt/libomp/lib")
     set(OPENMP_INCLUDES "/opt/homebrew/opt/libomp/include")
     set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
-    set(OpenMP_CXX_FLAGS "-fopenmp -lomp -Wno-unused-command-line-argument")
+    set(OpenMP_CXX_FLAGS "-lomp -Wno-unused-command-line-argument")
     set(OpenMP_CXX_LIB_NAMES "libomp" "libgomp" "libiomp5")
     set(OpenMP_libomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
     set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
