--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,6 @@ set_target_properties(${TARGET} PROPERTIES COMPILE_FLAGS "-pthread" LINK_FLAGS "
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
 
-add_executable(${PROJECT_NAME} main.cpp train_and_test.hpp)
-target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBS}) 
-target_include_directories(${PROJECT_NAME} PUBLIC "${PROJECT_BINARY_DIR}")
+# add_executable(${PROJECT_NAME} main.cpp train_and_test.hpp)
+# target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBS}) 
+# target_include_directories(${PROJECT_NAME} PUBLIC "${PROJECT_BINARY_DIR}")
