--- a/src/tooth/CMakeLists.txt
+++ b/src/tooth/CMakeLists.txt
@@ -1,5 +1,4 @@
 file(GLOB_RECURSE SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
-add_library(TOOTH_ENGINE ${SRCS})
-target_include_directories(TOOTH_ENGINE INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(TOOTH_ENGINE PUBLIC INFRASTRUCTURE)
+add_library(XTOOTH ${SRCS})
+target_include_directories(XTOOTH INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
