--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -16,7 +16,7 @@ jobs:
           submodules: recursive
       - uses: ilammy/msvc-dev-cmd@v1
         with:
-          arch: amd64_x86
+          arch: amd64
       - name: Build
         shell: cmd
         run: |
