--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ project(main VERSION 0.1.0)
 set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(src)
-# add_subdirectory(backend)
+add_subdirectory(backend)
 # add_subdirectory(tests)
