add basic drawable and NewMeshDrawable; wait to complete the container

--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -4,4 +4,4 @@ file(GLOB_RECURSE CSRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 add_library(XRENDER ${CSRCS} ${CPPSRCS})
-target_include_directories(XRENDER INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(XRENDER INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} ${GEOMETRY_INCLUDE_DIRS})
