load mesh method compelete

--- a/src/libs/CMakeLists.txt
+++ b/src/libs/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_subdirectory(infrastructure)
 add_subdirectory(geometry)
 
-target_link_libraries(GEOMETRY PRIVATE glm)
+target_link_libraries(GEOMETRY PRIVATE glm pybind11::embed)
