new tooth lib, preprocess path

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,7 +17,7 @@ add_executable(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
 GroupSourcesByFolder(${PROJECT_NAME})
 
 # link deps to libs
-target_link_libraries(XRENDER PRIVATE ${DEPS} INFRASTRUCTURE GEOMETRY XGUI)
+target_link_libraries(XRENDER PRIVATE ${DEPS} INFRASTRUCTURE GEOMETRY)
 target_link_libraries(XTOOTH PRIVATE glm INFRASTRUCTURE GEOMETRY)
 target_link_libraries(XGUI PRIVATE ${DEPS} INFRASTRUCTURE GEOMETRY XRENDER)
 
