--- a/src/tooth/CMakeLists.txt
+++ b/src/tooth/CMakeLists.txt
@@ -2,3 +2,4 @@ file(GLOB_RECURSE SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 add_library(XTOOTH ${SRCS})
 target_include_directories(XTOOTH INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(XTOOTH PRIVATE pybind11::embed)
