--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Controller]
-Pos=11,13
+Pos=10,13
 Size=389,229
 Collapsed=0
 
@@ -14,7 +14,12 @@ Size=552,157
 Collapsed=0
 
 [Window][Import]
-Pos=717,239
+Pos=720,246
 Size=240,268
+Collapsed=0
+
+[Window][force_replace_config?]
+Pos=428,288
+Size=313,124
 Collapsed=0
 
