a good start of project manage

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Controller]
-Pos=10,13
+Pos=1,15
 Size=389,229
 Collapsed=0
 
@@ -20,6 +20,16 @@ Collapsed=0
 
 [Window][force_replace_config?]
 Pos=428,288
-Size=313,124
+Size=341,138
+Collapsed=0
+
+[Window][force_replace_config?F:\Repos\renderlab\testcase]
+Pos=429,310
+Size=341,180
+Collapsed=0
+
+[Window][Force to load the project?##F:\Repos\renderlab\testcase]
+Pos=429,310
+Size=341,180
 Collapsed=0
 
