--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Controller]
-Pos=1,15
+Pos=12,11
 Size=389,229
 Collapsed=0
 
@@ -14,7 +14,7 @@ Size=552,157
 Collapsed=0
 
 [Window][Import]
-Pos=720,246
+Pos=721,246
 Size=240,268
 Collapsed=0
 
@@ -29,7 +29,12 @@ Size=341,180
 Collapsed=0
 
 [Window][Force to load the project?##F:\Repos\renderlab\testcase]
-Pos=429,310
+Pos=496,223
+Size=341,180
+Collapsed=0
+
+[Window][Force to load the project1?##F:\Repos\renderlab\testcase]
+Pos=534,328
 Size=341,180
 Collapsed=0
 
