--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,12 +19,13 @@ GroupSourcesByFolder(${PROJECT_NAME})
 # link deps to libs
 target_link_libraries(XRENDER PRIVATE ${DEPS} INFRASTRUCTURE GEOMETRY)
 target_link_libraries(XTOOTH PRIVATE glm INFRASTRUCTURE GEOMETRY)
-target_link_libraries(XGUI PRIVATE ${DEPS} INFRASTRUCTURE GEOMETRY XRENDER)
+target_link_libraries(XGUI PRIVATE ${DEPS} INFRASTRUCTURE GEOMETRY XRENDER imnodes)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE ${DEPS} ${LIBS} pybind11::embed)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${DEPS} ${LIBS} pybind11::embed imnodes)
 include_directories(${imgui_SOURCE_DIR} ${imgui_SOURCE_DIR}/backends)
 
 # include
 target_include_directories(XTOOTH PRIVATE ${INFRASTRUCTURE_INCLUDE_DIRS} ${GEOMETRY_INCLUDE_DIRS})
 target_include_directories(XRENDER PRIVATE ${INFRASTRUCTURE_INCLUDE_DIRS} ${GEOMETRY_INCLUDE_DIRS})
 target_include_directories(XGUI PRIVATE ${INFRASTRUCTURE_INCLUDE_DIRS} ${GEOMETRY_INCLUDE_DIRS})
+target_include_directories(XGUI PRIVATE ${imnodes_SOURCE_DIR})
