--- a/imgui.ini
+++ b/imgui.ini
@@ -18,28 +18,8 @@ Pos=721,246
 Size=240,268
 Collapsed=0
 
-[Window][force_replace_config?]
-Pos=428,288
-Size=341,138
-Collapsed=0
-
-[Window][force_replace_config?F:\Repos\renderlab\testcase]
-Pos=429,310
-Size=341,180
-Collapsed=0
-
-[Window][Force to load the project?##F:\Repos\renderlab\testcase]
-Pos=496,223
-Size=341,180
-Collapsed=0
-
-[Window][Force to load the project1?##F:\Repos\renderlab\testcase]
-Pos=534,328
-Size=341,180
-Collapsed=0
-
-[Window][simple node editor]
-Pos=457,71
-Size=723,472
+[Window][Tooth Workflow Editor]
+Pos=223,164
+Size=871,463
 Collapsed=0
 
