use wkflow_context.h as unique define

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,7 @@ GroupSourcesByFolder(${PROJECT_NAME})
 # link deps to libs
 target_link_libraries(XRENDER PRIVATE ${DEPS} INFRASTRUCTURE GEOMETRY)
 target_link_libraries(XTOOTH PRIVATE glm INFRASTRUCTURE GEOMETRY)
-target_link_libraries(XGUI PRIVATE ${DEPS} INFRASTRUCTURE GEOMETRY XRENDER imnodes)
+target_link_libraries(XGUI PRIVATE ${DEPS} INFRASTRUCTURE GEOMETRY XRENDER XTOOTH imnodes)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE ${DEPS} ${LIBS} pybind11::embed imnodes)
 include_directories(${imgui_SOURCE_DIR} ${imgui_SOURCE_DIR}/backends)
