change visible place

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=389,196
 Collapsed=0
 
 [Window][Logger]
-Pos=7,775
+Pos=9,870
 Size=616,157
 Collapsed=1
 
@@ -19,6 +19,12 @@ Size=240,268
 Collapsed=0
 
 [Window][Project Panel]
-Pos=814,15
-Size=383,228
+Pos=1257,18
+Size=315,377
 Collapsed=0
+
+[Window][Tooth Workflow Editor - testcase]
+Pos=60,60
+Size=950,500
+Collapsed=0
+
