--- a/imgui.ini
+++ b/imgui.ini
@@ -1,16 +1,16 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=1075,280
+Size=148,136
 Collapsed=0
 
 [Window][Controller]
-Pos=13,16
+Pos=6,15
 Size=389,196
 Collapsed=0
 
 [Window][Logger]
-Pos=9,870
-Size=616,157
+Pos=17,866
+Size=536,157
 Collapsed=1
 
 [Window][Import]
@@ -19,11 +19,21 @@ Size=240,268
 Collapsed=0
 
 [Window][Project Panel]
-Pos=1257,18
-Size=315,377
+Pos=1266,15
+Size=315,361
 Collapsed=0
 
 [Window][Tooth Workflow Editor - testcase]
+Pos=60,60
+Size=950,500
+Collapsed=0
+
+[Window][gizmo window]
+Pos=1387,697
+Size=228,253
+Collapsed=0
+
+[Window][Tooth Workflow Editor - testcase-2]
 Pos=60,60
 Size=950,500
 Collapsed=0
