--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,7 @@ GroupSourcesByFolder(${PROJECT_NAME})
 
 # link deps to libs
 target_link_libraries(XRENDER PRIVATE ${DEPS} INFRASTRUCTURE GEOMETRY imguizmo)
-target_link_libraries(XTOOTH PRIVATE glm INFRASTRUCTURE GEOMETRY)
+target_link_libraries(XTOOTH PRIVATE glm INFRASTRUCTURE GEOMETRY XRENDER)
 target_link_libraries(XGUI PRIVATE ${DEPS} INFRASTRUCTURE GEOMETRY XRENDER XTOOTH imnodes imguizmo)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE ${DEPS} ${LIBS} pybind11::embed imnodes imguizmo)
